add group-create.html and B/E resource to create new group
